--- a/mystyles/style.css
+++ b/mystyles/style.css
@@ -2,3 +2,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;500;700&display=swap');
 
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: 'Hind Siliguri', sans-serif;
+    text-decoration: none;
+    list-style: none;
+}
+
+:root{
+    
+}
