--- a/mystyles/style.css
+++ b/mystyles/style.css
@@ -13,5 +13,9 @@
 
 :root{
     --backgroundcolor:#101113;
-    --
+    --textcolor:white;
+    --maincolor:#34e7f8;
+    --secundarycolor:#fcfcfc;
+    --h1font-size:3em;
+    --pfont-size:1em;
 }
