--- a/mystyles/style.css
+++ b/mystyles/style.css
@@ -1,12 +1,10 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;500;700&display=swap');
-
 *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'Hind Siliguri', sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-decoration: none;
     list-style: none;
 }
@@ -16,7 +14,7 @@
     --textcolor:#fff;
     --maincolor:#34e7f8;
     --secundarycolor:#fcfcfc;
-    --h1font-size:3em;
+    --h1font-size:4em;
     --pfont-size:1em;
 }
 
@@ -27,5 +25,44 @@ body{
 
 header{
     position: fixed;
-    
+    width: 100%;
+    top: 0px;
+    right: 0px;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 8%;
 }
+
+#logo{
+    display: flex;
+    align-items: center;
+    color: var(--textcolor);
+    font-size: 3em;
+    font-weight: bold;
+}
+
+#logo i{
+    color: var(--maincolor);
+    font-size: 32px;
+    margin-right: 5px;
+}
+
+#navigation{
+    display: flex;
+}
+
+#navigation a{
+    color:var(--secundarycolor);
+    font-size: var(--pfont-size);
+    font-weight: 500;
+    margin: 0px 30px;
+    transition: a .55s ease;
+}
+
+#navigation a:hover{
+    color: var(--maincolor);
+} 
+
+
