--- a/style.css
+++ b/style.css
@@ -18,13 +18,10 @@
     --p-font: 1rem;
 }
 
-
 body{
     background-color:#1d2631 ;
     color: var(--tex-color);
 }
-
-
 
 header{
     position: fixed;
@@ -36,11 +33,9 @@ header{
     align-items: center;
     justify-content: space-between;
     padding: 30px 8%;
-
 }
 
-
-.logo{
+#logo{
     display: flex;
     align-items: center;
     color: var(--tex-color);
@@ -48,7 +43,7 @@ header{
     font-weight: bold;
 }
 
-.logo i{
+#logo i{
     color: var(--main-color);
     font-size: 32px;
     margin-right: 5px;
@@ -70,7 +65,6 @@ header{
     color: var(--main-color);
 
 }
-
 
 .header-icons{
     display: flex;
@@ -95,7 +89,6 @@ header{
     transform: translateY(-5px);
     color: var(--main-color);
 }
-
 
 .section{
 
@@ -138,7 +131,6 @@ header{
     height: auto;
     margin-left: 25%;
 }
-
 
 .buttom{
     display: inline-block;
@@ -188,7 +180,6 @@ header{
 
 .row:hover {
     transform: translateY(-8px);
-
 }
 
 .row2{
@@ -217,7 +208,6 @@ header{
     justify-content: center;
     transition: all.55s ease;
     cursor: pointer;
-
 }
 
 .row3:hover{
