--- a/mystyles/mobilestyles.css
+++ b/mystyles/mobilestyles.css
@@ -56,7 +56,7 @@ i#burguer:hover{
 }
 
 menu > ul > li > a{
-    display: none;
+    display: block;
     padding: 10px;
     text-decoration: none;
     text-align: center;
