--- a/mystyles/mobilestyles.css
+++ b/mystyles/mobilestyles.css
@@ -23,7 +23,7 @@ body{
     color: var(--tex-color);
 }
 
-div#solo{
+.logo{
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -41,17 +41,28 @@ i#logo{
     font-size: 70px;
 }
 
-i#cart{
-    width: 15vw;
+.cart{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    align-content: center;
+}
+
+#cart{
     padding: 10px;
-    font-size: 3em;
-    margin-left: 385px;
+    font-size: 2em;
     cursor: pointer;
 }
 
+.burguer{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
 i#burguer{
-    display: block;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     font-size: 35px;
     color: var(--tex-color);
@@ -63,12 +74,6 @@ i#burguer:hover{
     color: white;
     background-color: var(--main-color);
     border-radius: 5px;
-}
-
-#fix{
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 menu > nav > ul > li > a{
@@ -95,10 +100,7 @@ nav{
     align-items: center;
 }
 
-.section{
-    padding: 0 15%;
-}
-.home{
+#home{
     position: relative;
     height: 100vh;
     width: 100%;
@@ -108,35 +110,21 @@ nav{
     gap: 2rem;
 }
 
-.home-text h1{
-    font-size: var(--h1-font);
-    line-height: 1.2;
-    margin-bottom: 2px;
-}
-
-.home-text p{
+section > div > p{
     color: #ffffff99;
     font-size: 14px;
     font-weight: 400;
     margin-bottom: 60px;
 }
 
-.home-text h3{
+section > div > h3{
     font-size: 40px;
     font-weight: 700;
     letter-spacing: 2px;
     margin-bottom: 35px;
 }
 
-
-.home-img img{
-    max-width: 100%;
-    width: 28rem;
-    height: auto;
-    margin-left: 25%;
-}
-
-.buttom{
+#buttom{
     display: inline-block;
     padding: 15px 70px;
     font-size: 16px;
@@ -147,7 +135,7 @@ nav{
     color: #fff;
 }
 
-.buttom:hover{
+#buttom:hover{
     background: var(--tex-color);
     border: 2px solid var(--tex-color);
     color: #000;
