--- a/mystyles/mobilestyles.css
+++ b/mystyles/mobilestyles.css
@@ -45,7 +45,7 @@ i#logo{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    align-content: center;
+    text-align: center;
 }
 
 #cart{
