--- a/mystyles/mobilestyles.css
+++ b/mystyles/mobilestyles.css
@@ -119,7 +119,18 @@ div.main > ul{
     gap: 3rem;
 }
 
-div.main > ul > li > img{
+div.main > ul > div#heads > li > img{
+    width: 50px;
+    height: auto;
+    max-width: 100%;
+}
+div.main > ul > div#buds > li > img{
+    width: 50px;
+    height: auto;
+    max-width: 100%;
+}
+
+div.main > ul > div#micros > li > img{
     width: 50px;
     height: auto;
     max-width: 100%;
@@ -224,7 +235,7 @@ section > div.home > a:hover{
 
 
 
-div > ul > p#wire {
+div#heads > p{
     display:none;
  }
 
