--- a/mystyles/allstyle.css
+++ b/mystyles/allstyle.css
@@ -32,7 +32,7 @@
         font-size: 4em;
     }
 
-    menu#itens > nav > ul{
+    div#container > nav > ul{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
