--- a/mystyles/allstyle.css
+++ b/mystyles/allstyle.css
@@ -24,6 +24,13 @@
         display: block;
     }
 
+    .logo{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        text-align: center;
+    }
+
     i#logo{
         font-size: 6em;
     }
