--- a/mystyles/mobilestyles.css
+++ b/mystyles/mobilestyles.css
@@ -31,7 +31,7 @@ header > div.logo{
     flex-direction: row;
     align-items: center;
     align-content: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 header > div > h1{
