--- a/mystyles/mobilestyles.css
+++ b/mystyles/mobilestyles.css
@@ -18,6 +18,7 @@
 
 body{
     background-color:var(--bg-color);
+    height: 1000px;
     color: var(--tex-color);
 }
 
@@ -144,7 +145,6 @@ div.main{
     gap: 3rem;
 }
 
-
 #row1 > img,
 #row2 > img,
 #row3 > img{
@@ -152,7 +152,6 @@ div.main{
     height: auto;
     max-width: 100%;
 }
-
 
 #row1{
     display: inline-flex;
@@ -247,4 +246,3 @@ section > div.home > a:hover{
     background: var(--tex-color);
     color: var(--bg-color);
 }
-
