--- a/mystyles/mobilestyles.css
+++ b/mystyles/mobilestyles.css
@@ -246,13 +246,7 @@ section#home > a:hover{
 }
 
 img#back{
-    width: 80vw;
-    height: 80vh;
-    background-color: rgba(255, 255, 255, 0);
-}
-
-section#cover{
-    display: flex;
-    text-align: center;
-    align-items: center;
+    width: 95vw;
+    height: 450px;
+    background-color: rgba(255, 255, 255, 0.586);
 }
